frontend/src/styles/_overrides.scss
// External dependency variables or mixins that are required/extended by our custom styles (tilde tells Webpack not to use relative path)
// IMPORTANT: Please put non-variable/mixin external dependency imports in vendor.scss!
// Patternfly variables must be imported before Bootstrap

// @import '../../node_modules/@patternfly/patternfly/sass-utilities/_all';

// @import '../../node_modules/@patternfly/patternfly/_variables';

// Disable PatternFly 4 reset.
// $pf-global--enable-reset: false;

/*
$color-grey-background-border: #ccc;
*/

// PatternFly 4 overrides

.pf-c-chip-group__label {
  --pf-c-chip-group__label--MaxWidth: 50em;
}

.pf-c-chip__text {
  --pf-c-chip__text--MaxWidth: 50em;
}

// Remove the padding by default
.pf-c-page__main-section {
  padding: 0px;
}

// Remove background Image and color by default in header, login and about modal
/*
.pf-c-page__header {
  background-image: none;
  background-color: unset;
}
*/

/*
.pf-c-about-modal-box__hero {
  background-image: none !important;
  background-color: transparent;
}
*/

.pf-c-login,
.login-pf {
  background-image: none;
  background-color: #030303;
}

// Menu thin and remove margin in top
/*
.pf-c-page__sidebar {
  --pf-c-page__sidebar-body--PaddingTop: 0;
  --pf-c-page__sidebar--md--Width: 210px; // TODO: Remove. Test enlarged message center when removing.
  min-height: 100vh;
}
*/

/**
 Fix height in filter selector
 */
/*
 .filter-pf-select-dropdown {
  height: 29px;
}
*/

/**
  Fix underline decoration in links
*/
/*
a:hover,
a:focus {
  text-decoration: none;
}
*/

/*
 Remove height form-control
 */
/*
 .form-control {
  height: unset;
}
*/

/*
Fix modal-title size
 */
/*
.modal-title {
  font-size: 18px;
}
*/

/*
keep test aligned vertically
 */
/*
 .table > tbody > tr > td {
  vertical-align: middle;
}
*/

/*
Unset line-height stylefor connected text in suspend trafic wizard
 */
/*
.list-group-item-text {
  line-height: unset;
  width: 100%;
}
*/

/*
Set width 100% parent in matching routing wizard
 */
/*
 .match-routing-wizard .list-group-item-text {
  width: 100%;
}
*/

/*
button {
  font-family: var(--pf-global--FontFamily--sans-serif);
}
*/

/*
input {
  font-family: var(--pf-global--FontFamily--sans-serif);
}
*/

/*
Fix font size in graph help
*/

/*
.modal-content {
  font-size: 12px;
}
*/

/*
Fix icon in buttons of pagination pages
 */
/*
.pagination > li > a > .i {
  margin-top: 5px;
}
*/

/*
Top line in tabs
 */
/*
.nav-tabs {
  border-top: 1px solid #ededed;
}
*/

/*
Inline Alerts: background transparent
 */
/*
.pf-c-alert.pf-m-inline {
  --pf-c-alert__icon--BackgroundColor: var(--pf-c-alert--m-inline__icon--BackgroundColor);
}
*/

/*
 Fix problem stack in Firefox in service details
 */
/*
.stack_service_details {
  height: 20%;
}
*/

/*
Kiosk mode
*/
html.kiosk {
  #page-sidebar {
    display: none;
  }

  header[role='kiali_header'] {
    display: none;
  }
}

/*
  Datepicker overrides for graph replay and other uses
  - note: global .tooltip setting but I think it should be OK
*/
// use PF fonts and font-size
.react-datepicker {
  font-family: var(--pf-global--FontFamily--sans-serif);
  font-size: var(--pf-global--FontSize);
}
// provide more space for time container given bigger font
.react-datepicker__time-container {
  width: 110px;
  .react-datepicker__time {
    .react-datepicker__time-box {
      width: 100%;
    }
  }
}
// Make sure datepicker popper rises above other inflated z-index elements
//   - secondaryMasthead currently at 10
.react-datepicker-popper {
  z-index: 11;
}
.react-datepicker__navigation--next--with-time:not(.react-datepicker__navigation--next--with-today-button) {
  right: 118px;
}
// Make sure tooltips are below datepicker popper but above secondary masthead
.tooltip {
  z-index: 10 !important;
}
// draw panels should have less z-index than dropdowns
.pf-c-drawer__panel {
  z-index: 199 !important;
}

